# otamgr

./: Makefile
pkg/: configure.ac
pkg/src/: Makefile.am  otamgr.c
